src-tauri/crates/key-vault/src/tests/snapshots/key_vault__key_extractor__tests__auto_detect_generic_sk.snap
---
source: src/key_vault/tests/key_extractor_tests.rs
expression: result
---
api_key: sk-proj-testkey000000000000000
base_url: ~
key_type: unknown
confidence: high
notes:
  - Found unknown key
