src-tauri/crates/key-vault/src/tests/snapshots/key_vault__key_extractor__tests__non_api_urls_filtered.snap
---
source: src/key_vault/tests/key_extractor_tests.rs
expression: result
---
api_key: sk-test1234567890abcdefghijklmnopqrstuvwxyz
base_url: "https://api.example.com/api/codex/v1"
key_type: codex
confidence: high
notes:
  - Found codex key
  - Found base URL
